Multiple improvements in form management related classes. -Fix and optimize form update in dynamicProperties component. -Pass object reference to form context through PropertyHelper. -New utility methods in DictionaryUtils. -New method in ComponentUtils to process postAddToView events.