@@ -1,31 +1,31 @@
 /*
  * GDMatrix
- *  
+ *
  * Copyright (C) 2020, Ajuntament de Sant Feliu de Llobregat
- *  
- * This program is licensed and may be used, modified and redistributed under 
- * the terms of the European Public License (EUPL), either version 1.1 or (at 
- * your option) any later version as soon as they are approved by the European 
+ *
+ * This program is licensed and may be used, modified and redistributed under
+ * the terms of the European Public License (EUPL), either version 1.1 or (at
+ * your option) any later version as soon as they are approved by the European
  * Commission.
- *  
- * Alternatively, you may redistribute and/or modify this program under the 
- * terms of the GNU Lesser General Public License as published by the Free 
- * Software Foundation; either  version 3 of the License, or (at your option) 
- * any later version. 
- *   
- * Unless required by applicable law or agreed to in writing, software 
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT 
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
- *    
- * See the licenses for the specific language governing permissions, limitations 
+ *
+ * Alternatively, you may redistribute and/or modify this program under the
+ * terms of the GNU Lesser General Public License as published by the Free
+ * Software Foundation; either  version 3 of the License, or (at your option)
+ * any later version.
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *
+ * See the licenses for the specific language governing permissions, limitations
  * and more details.
- *    
- * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along 
- * with this program; if not, you may find them at: 
- *    
+ *
+ * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along
+ * with this program; if not, you may find them at:
+ *
  * https://joinup.ec.europa.eu/software/page/eupl/licence-eupl
- * http://www.gnu.org/licenses/ 
- * and 
+ * http://www.gnu.org/licenses/
+ * and
  * https://www.gnu.org/licenses/lgpl.txt
  */
 package org.santfeliu.form.builder;
@@ -115,7 +115,7 @@ public class ReferenceFormBuilder extends MatrixFormBuilder
           Document document = documents.get(0);
           String contentId = document.getContent().getContentId();
 
-          Form form = (Form)entry.formClass.newInstance();
+          Form form = (Form)entry.formClass.getConstructor().newInstance();
           form.read(getDocumentStream(contentId));
           form.setLastModified(document.getChangeDateTime());
           setup(form);
@@ -133,7 +133,7 @@ public class ReferenceFormBuilder extends MatrixFormBuilder
   private Entry getEntry(String selector)
   {
     if (selector == null) return null;
-    
+
     Entry entry = null;
     int i = 0;
     while (i < REFERENCE_TABLE.length && entry == null)
@@ -144,7 +144,7 @@ public class ReferenceFormBuilder extends MatrixFormBuilder
     }
     return entry;
   }
-  
+
   private List<Document> findDocuments(Entry entry, String name)
     throws Exception
   {
@@ -162,7 +162,7 @@ public class ReferenceFormBuilder extends MatrixFormBuilder
     DocumentManagerClient client = getDocumentManagerClient();
     return client.findDocuments(filter);
   }
-  
+
   static class Entry
   {
     String prefix;
